# Coding-language-

./: CLAUDE.md  README.md  kestrel-DESIGN.md  kestrel-editor.html  kestrel.js
.github/workflows/: pages.yml
benchmarks/: .gitignore  results.md  run.sh
benchmarks/array-sum/: bench.c  bench.kes
benchmarks/bounds-heavy/: bench.c  bench.kes
benchmarks/fib-recursive/: bench.c  bench.kes
benchmarks/integer-loop/: bench.c  bench.kes
benchmarks/parallel-map/: bench.c  bench.kes
docs/: SYNTAX.md
docs/superpowers/plans/: 2026-07-20-memo-cap-and-heap-arrays.md  2026-07-20-watch-mode.md  2026-07-21-devtool-editor-plan.md  2026-07-21-for-loop-syntax-plan.md
docs/superpowers/specs/: 2026-07-20-memo-cap-and-heap-arrays-design.md  2026-07-21-for-loop-syntax-design.md  2026-07-21-jit-watch-mode-design.md  2026-07-22-real-type-checking-design.md
examples/: bench_loop.kes
kestrelc/: Cargo.toml  README.md
kestrelc-devtool/src/: main.rs  runner.rs
kestrelc-web/: Cargo.toml  README.md
kestrelc-web/src/: lib.rs
kestrelc/runtime/: kestrelc_runtime.c
kestrelc/src/: ast.rs  codegen.rs  cse.rs  fusion.rs  inline.rs  interner.rs  jit_codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  purity.rs  resolve.rs  typecheck.rs  wasm_codegen.rs  watch.rs  where_info.rs
kestrelc/tests/: integration.rs
test/: bytecode.test.js  kestrel.test.js
