[package]
name = "kestrelc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# default-features = false is what keeps Cranelift (native-only,
# host-CPU-probing) out of this build entirely — see kestrelc/Cargo.toml.
kestrelc = { path = "../kestrelc", default-features = false }

[profile.release]
opt-level = "s"
lto = true
